--- a/itis3135/project/e2.html
+++ b/itis3135/project/e2.html
@@ -1,4 +1,78 @@
-My name is David Udoeyop and I made this website because sharing wonderful Books
-is a passion of mine. now I have a more general/automated way of doing it. You don't
-really need to know much about me except the fact that I have good taste so consider my
-reccomendations.
+<!-- index.html -->
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Book Website</title>
+  <!-- jQuery and jQuery UI -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+  <!-- e slick and magnific-popup -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+  <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+  <!-- custom styles and scripts -->
+  <link rel="stylesheet" type="text/css" href="styles/pagestyles.css">
+  <link rel="stylesheet" href="styles/new.css">
+
+  <script src="scripts/new.js"></script>
+
+</head>
+<body>
+  <header>
+    <img id="logo" src="img/stack.png" alt="image of a stack of books" height="50px" width="40px">
+    <h2 class="big-txt">Books</h2>
+
+    <div class="navigation">
+    <nav role="navigation" class="navigation-items">
+        <a href="#about">Home</a>
+        <a href="#books"> Books</a>
+        <a href="#contact"> About</a>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section id="featured-books">
+      <div class="featured_books">
+        <h2 class="hfb">Featured Books</h2>
+
+        <div class="book-carousel">
+          <div><img src="img/book1.jpg" alt="Book 1" id="img" height="260px" width="170px"></div>
+          <div><img src="img/book2.jpg" alt="Book 2" id="img" height="260px" width="170px"></div>
+          <div><img src="img/book3b.jpg" alt="Book 3" id="img"height="260px" width="170px"></div>
+          <div><img src="img/book4.jpg" alt="Book 1" id="img" height="260px" width="170px"></div>
+          <div><img src="img/book5.jpg" alt="Book 2" id="img" height="260px" width="170px"></div>
+          <div><img src="img/book6.jpg" alt="Book 3" id="img" height="260px" width="170px"></div>
+        </div>
+      </div>
+
+    </section>
+    <section id="categories">
+      <h2>Status</h2>
+
+      <div id="accordion">
+        <h3>Reading Now</h3>
+        <div>
+          <ul>
+            <li>It ends with us</li>
+            <li>Symptoms of being human</li>
+            <li>The perks of being a wallflower</li>
+          </ul>
+        </div>
+        <h3>Next In Queue</h3>
+        <div>
+          <ul>
+            <li>Ugly Love</li>
+            <li>Little Women</li>
+            <li>I'll give you the sun</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+  </main>
+  <footer>
+    <p>Copyright 2021 Book Website</p>
+  </footer>
+</body>
+</html>
