--- a/itis3135/project/search.html
+++ b/itis3135/project/search.html
@@ -7,7 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/search.js"></script>
 
   </head>
   <body>
